# code-playground

./: .gitignore  .gitmodules  .sourcery.yaml  Dockerfile  LICENSE  README.md  build.sh  new_submodule.sh  push_all_submodules.sh  pythondev.Dockerfile  pythondev.docker-compose.yml
carteiras-recomendadas/: main.py  pyproject.toml
carteiras-recomendadas/utils/: d  pdfhandler.py  process_reports.py  regextest.py
freeCodeCampCourses/responsive-web-design/: README.md
freeCodeCampCourses/responsive-web-design/2-4-Acessibility/: index.html
freeCodeCampCourses/responsive-web-design/2-CafeMenu/: style.css
pdf-readers/: README.md  main.py  pymupdf-full-text.txt  pymupdf-metadata.txt  pypdf2-full-text.txt  pypdf2-metadata.txt  pyproject.toml
pdf-readers/Docs/: PyPDF2.md  pymupdf.md
pdf-readers/gui/: dialogs.py
pdf-readers/pdfparsers/: pymupdfparser.py  pypdf2parser.py
pdf-readers/utils/: filehandler.py
portfolio-optimization/: README.md  portfolio_optimization_sample.ipynb  pyproject.toml
portfolio-optimization/data/: stock_data.csv
portfolio-optimization/pyopt/: client.py
small-experiments/: main.py
