[tool.poetry]
name = "portfolio-optimization"
version = "0.1.0"
description = "Code experiments with portfolio optimization"
authors = ["phbrgnomo <phbrcc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
pandas = "^2.1.4"
scipy = "^1.11.4"
fake-useragent = "^1.4.0"
python-dateutil = "^2.8.2"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
